adapt to jdk20